OHRM5X-1510: Fix broken table header alignment issue (#1349)

--- a/src/client/src/orangehrmAdminPlugin/pages/languagePackage/language-package.scss
+++ b/src/client/src/orangehrmAdminPlugin/pages/languagePackage/language-package.scss
@@ -14,33 +14,23 @@
 // if not, write to the Free Software Foundation, Inc., 51 Franklin Street, Fifth Floor,
 // Boston, MA  02110-1301, USA
 
-.addlanguage-note{
+.addlanguage-note {
     background-color: $oxd-interface-gray-lighten-2-color;
     border-radius: 10px;
     width: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-
-.addlanguage-note-text{
+.addlanguage-note-text {
     padding: 1.2rem;
 }
-
-.oxd-table-cell-actions{
-    justify-content: end;
-}
-
-.orangehrm-dialog-modal{
-    width: '90%';
-    min-width: '800px';
-}
-
 .orangehrm-information-card-text {
     font-size: $oxd-input-control-font-size;
     color: $oxd-input-control-font-color;
     font-weight: $oxd-input-control-font-weight;
 }
-
-.oxd-table-th{
-    margin-right: 10rem;
+::v-deep(.card-footer-slot) {
+    .oxd-table-cell-actions {
+      justify-content: flex-end;
+    }
 }
